Closes #107: unstash() - Unexpected message type in initiation